tests/NormalTests/paczka1/fuzzy1/86113640.err
Error in line 3: IZ3 S688 76,4
Error in line 1: WR3 A914 28,9
Error in line 10: WR3 A386 65,2
Error in line 13: IZ3 A386 -1,9
Error in line 8: dCjcx A914 28,2
Error in line 7: PPcv09hW S485 34,6
Error in line 25: dCjcx S485 -2,2
Error in line 21: dCjcx S485 59,5
Error in line 4: IZ3 A386 2,2
Error in line 30: 6PHQUjQpa S688 48,7
